--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>Alura Plus</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+ <title>Alura Plus</title>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="styles.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -39,15 +39,15 @@
     <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
     <ul class="dispositivos__lista">
         <li>
-            <img src="img/tv.png" alt="Ícone de televisão">
-            <h3 class="lista__item">TV</h3>
+            <img src="Tv antiga.jpeg" alt="Ícone de televisão">
+            <h3 class="lista_item">TV</h3>
         </li>
         <li>
-            <img src="img/computador.png" alt="Ícone de computador">
+            <img src="download.png" alt="Ícone de computador">
             <h3 class="lista__item">Computador</h3>
         </li>
         <li>
-            <img src="img/celular.png" alt="Ícone de celular">
+            <img src="celular.png" alt="Ícone de celular">
             <h3 class="lista__item">Celular</h3>
         </li>
     </ul>
